--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -9,6 +9,33 @@
 
   Button {
     margin-top: 12px;
-    width: 50%;
+    width: 105px;
+  }
+}
+
+.list-tasks {
+  margin-top: 24px;
+  list-style: none;
+  padding: 0;
+
+  button {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    width: 100%;
+    border-radius: 24px;
+    overflow-wrap: break-word;
+
+    &:hover {
+      background-color: #f5f5f5;
+    }
+
+    &:active {
+      background-color: #e0e0e0;
+    }
   }
 }
