--- a/src/components/selectedtask/selectedtask.scss
+++ b/src/components/selectedtask/selectedtask.scss
@@ -3,4 +3,21 @@
   block-size: fit-content;
   margin-top: 24px;
   white-space: pre-wrap;
+  width: 32rem;
+
+  .task-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 12px;
+  }
+
+  .task-description {
+    font-size: 16px;
+    margin-bottom: 12px;
+  }
+
+  .task-date {
+    font-size: 12px;
+    color: #808080;
+  }
 }
